@@ -13,18 +13,22 @@ spl_autoload_register(function ($className) {
 	}
 });
 
-new Foo;
+try {
+    new Foo();
+} catch (Exception $e) { }
+
+// We never reach here.
+var_dump(new Foo());
 
 ?>
 --EXPECTF--
 string(3) "Foo"
 string(3) "Bar"
 
-Fatal error: Uncaught Exception: Bar in %s:%d
+Fatal error: During class fetch: Uncaught Exception: Bar in %s:%d
 Stack trace:
 #0 [internal function]: {closure}('Bar')
 #1 %s(%d): spl_autoload_call('Bar')
 #2 [internal function]: {closure}('Foo')
 #3 %s(%d): spl_autoload_call('Foo')
-#4 {main}
-  thrown in %s on line %d
+#4 {main} in %s on line %d
